--- a/main.html
+++ b/main.html
@@ -10,6 +10,74 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1 align="center"> HTML Assignment #3</h1>
+	<table id = "table-1" class="middle">
+		<tr>
+			<td id = "t11">left</td>
+			<td class = "center" id ="t12">center</td>
+			<td class = "right" id ="t13">right</td>
+		</tr>
+		<tr>
+			<td id = "t21">left</td>
+			<td class = "center" id ="t22">center</td>
+			<td class = "right" id ="t23">right</td>
+		</tr>
+		<tr>
+			<td id = "t31">left</td>
+			<td class = "center" id ="t32">center</td>
+			<td class = "right" id ="t33">right</td>
+		</tr>
+
+
+		
+	</table><br><br>
+	<table id="table-2" class="middle">
+		<tr>
+		 <td colspan="6"></td>
+			
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2" colspan="3"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+		   <td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table><br><br>
+	<table id="table-3" class="middle">
+		<tr>
+		<td colspan="3"></td>
+			</tr>
+		<tr class=>
+			<td></td>
+			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="3"></td>
+		</tr>
+		
+	</table>
 
 </body>
 
