--- a/main.html
+++ b/main.html
@@ -1,84 +1,120 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>HTML Assignment 3</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            margin: 20px auto;
+            border: 1px solid black;
+            padding: 1px;
+            border-spacing: 1px;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 1px;
+        }
+        .middle {
+            text-align: center;
+        }
+        .center {
+            text-align: center;
+        }
+        .right {
+            text-align: right;
+        }
+        .green {
+            background-color: green;
+            height: 20px;
+        }
+        .blue {
+            background-color: blue;
+            height: 20px;
+        }
+        #t-image img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<h1 align="center"> HTML Assignment #3</h1>
-	<table id = "table-1" class="middle">
-		<tr>
-			<td id = "t11">left</td>
-			<td class = "center" id ="t12">center</td>
-			<td class = "right" id ="t13">right</td>
-		</tr>
-		<tr>
-			<td id = "t21">left</td>
-			<td class = "center" id ="t22">center</td>
-			<td class = "right" id ="t23">right</td>
-		</tr>
-		<tr>
-			<td id = "t31">left</td>
-			<td class = "center" id ="t32">center</td>
-			<td class = "right" id ="t33">right</td>
-		</tr>
+    <h1>HTML Assignment #3</h1>
 
+    <!-- Table 1 -->
+    <table id="table-1" class="middle">
+        <tr>
+            <td id="t11">left</td>
+            <td class="center" id="t12">center</td>
+            <td class="right" id="t13">right</td>
+        </tr>
+        <tr>
+            <td id="t21">left</td>
+            <td class="center" id="t22">center</td>
+            <td class="right" id="t23">right</td>
+        </tr>
+        <tr>
+            <td id="t31">left</td>
+            <td class="center" id="t32">center</td>
+            <td class="right" id="t33">right</td>
+        </tr>
+    </table><br><br>
 
-		
-	</table><br><br>
-	<table id="table-2" class="middle">
-		<tr>
-		 <td colspan="6"></td>
-			
-		</tr>
-		<tr>
-			<td rowspan="4"></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td rowspan="2" colspan="3"></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-		   <td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td colspan="6"></td>
-		</tr>
-	</table><br><br>
-	<table id="table-3" class="middle">
-		<tr>
-		<td colspan="3"></td>
-			</tr>
-		<tr class=>
-			<td></td>
-			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td colspan="3"></td>
-		</tr>
-		
-	</table>
+    <!-- Table 2 -->
+    <table id="table-2" class="middle">
+        <tr>
+            <td id="t21" colspan="6">Single Cell - Colspan 6</td>
+        </tr>
+        <tr>
+            <td rowspan="4"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td rowspan="2" colspan="3"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="6"></td>
+        </tr>
+    </table><br><br>
 
+    <!-- Table 3 -->
+    <table id="table-3" class="middle">
+        <tr class="green">
+            <td colspan="3"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td id="t-image">
+                <img src="/mnt/data/image.png" alt="Image Example">
+            </td>
+            <td></td>
+        </tr>
+        <tr class="blue">
+            <td colspan="3"></td>
+        </tr>
+    </table>
 </body>
-
 </html>
