--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@
         <tr>
             <td></td>
             <td id="t-image">
-                <img src="/mnt/data/image.png" alt="Image Example">
+                <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image Example">
             </td>
             <td></td>
         </tr>
