--- a/main.html
+++ b/main.html
@@ -67,38 +67,40 @@
     </table><br><br>
 
     <!-- Table 2 -->
-    <table id="table-2" class="middle">
-        <tr>
-            <td id="t21" colspan="6">Single Cell - Colspan 6</td>
-        </tr>
-        <tr>
-            <td rowspan="4"></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td rowspan="2" colspan="3"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6"></td>
-        </tr>
-    </table><br><br>
+<table id="table-2" class="middle">
+    <tr>
+        <td id="t21" colspan="6">Single Cell - Colspan 6</td> <!-- Fixed ID Placement -->
+    </tr>
+    <tr>
+        <td rowspan="4"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td rowspan="2" colspan="3"></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td colspan="6"></td>
+    </tr>
+</table><br><br>
+
+    
 
     <!-- Table 3 -->
     <table id="table-3" class="middle">
